--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17024,7 +17024,7 @@ body {
   margin-top: 0;
 }
 
-/* footer */
+/* 固定页脚 */
 
 html {
   position: relative;
@@ -17055,5 +17055,14 @@ body {
 
 .footer .container p a {
   color: inherit;
+}
+
+/* User register page */
+
+.register-page img.captcha {
+  cursor: pointer;
+  border: 1px solid #ced4da;
+  border-radius: 4px;
+  padding: 3px;
 }
 
