--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -118,3 +118,31 @@ body {
   margin-bottom: 100px;
 }
 
+/* create topic's picture limit width */
+
+.simditor-body img {
+  width: auto;
+  height: auto;
+  max-width: 100%;
+}
+
+@import "topic_body";
+
+.topics-show-page {
+  .card {
+    padding: 15px;
+
+    h1 {
+      margin: 0.4em auto 0.6em;
+      font-size: 28px;
+      line-height: 38px;
+    }
+
+    .topic-body img {
+        width: auto;
+        height: auto;
+    }
+  }
+}
+
+
