--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17586,3 +17586,14 @@ body {
   height: auto;
 }
 
+/* 回复列表 */
+
+.topic-reply a {
+  color: inherit;
+}
+
+.topic-reply .meta {
+  font-size: 0.9em;
+  color: #b3b3b3;
+}
+
