消息通知列表

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17597,3 +17597,18 @@ body {
   color: #b3b3b3;
 }
 
+/* 消息通知 */
+
+.notification_badge .badge {
+  font-size: 12px;
+  margin-top: 14px;
+}
+
+.notification_badge .badge-secondary {
+  background-color: #EBE8E8;
+}
+
+.notification_badge .badge-hint {
+  background-color: #d15b47 !important;
+}
+
