--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -157,3 +157,20 @@ body {
     color: #b3b3b3;
   }
 }
+
+/* 消息通知 */
+
+.notification_badge {
+  .badge {
+    font-size: 12px;
+    margin-top: 14px;
+  }
+
+  .badge-secondary {
+    background-color: #EBE8E8;
+  }
+
+  .badge-hint {
+    background-color: #d15b47 !important;
+  }
+}
